--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -7,5 +7,7 @@ include_directories("./include")
 project(threadpool CXX)
 
 add_executable(test_threadpool tests/test_threadpool.cpp)
-
 target_link_libraries(test_threadpool PRIVATE)
+
+add_executable(test_speed tests/test_speed.cpp)
+target_link_libraries(test_speed PRIVATE)
